--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
   <meta charset="utf-8">
   <title>Gully Inspection Map (With Login)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,11 +26,8 @@ function resetMap() {
   gullyData.forEach(({ marker }) => {
     map.removeLayer(marker);
   });
-  gullyData.length = 0;
-  for (const key in summaryCounts) {
-    summaryCounts[key] = 0;
-  }
-  updateSummary();
+    updateSummary();
+        saveToLocalStorage();
   localStorage.removeItem(storageKey);
 }
 
@@ -72,6 +67,7 @@ function enableDeleteMode() {
         gullyData.splice(index, 1);
         updateSummary();
         saveToLocalStorage();
+        saveToLocalStorage();
         deleteMode = false;
       }
       marker.off('click', onDeleteClick); // clean up
@@ -100,11 +96,8 @@ function resetMap() {
   gullyData.forEach(({ marker }) => {
     map.removeLayer(marker);
   });
-  gullyData.length = 0;
-  for (const key in summaryCounts) {
-    summaryCounts[key] = 0;
-  }
-  updateSummary();
+    updateSummary();
+        saveToLocalStorage();
   localStorage.removeItem(storageKey);
 }
 
@@ -143,6 +136,7 @@ function enableDeleteMode() {
         map.removeLayer(marker);
         gullyData.splice(index, 1);
         updateSummary();
+        saveToLocalStorage();
         saveToLocalStorage();
         deleteMode = false;
       }
@@ -282,16 +276,13 @@ function login() {
           }
         });
         updateSummary();
+        saveToLocalStorage();
       };
       reader.readAsText(file);
     });
 
     
-    gullyData.length = 0;
-    for (const key in summaryCounts) {
-      summaryCounts[key] = 0;
-    }
-
+    
     loadFromLocalStorage();
   } else {
     document.getElementById("loginError").innerText = 'Invalid username or password';
@@ -334,7 +325,14 @@ function updateSummary() {
      <span style='color:gray;'>⬤</span> Expired: ${counts.Expired} - Last inspection over 12 months<br>
      <span style='color:lightgray;'>⬤</span> Unmarked: ${counts.Unmarked} - No inspection data yet`;
 }
-
+<br>
+     <span style='color:yellow;'>⬤</span> Replacement: ${summaryCounts.Replacement} - Asset to be replaced<br>
+     <span style='color:blue;'>⬤</span> Clear: ${summaryCounts.Clear} - Functioning as intended<br>
+     <span style='color:orange;'>⬤</span> Broken: ${summaryCounts.Broken} - Requires urgent repair<br>
+     <span style='color:red;'>⬤</span> Remediation: ${summaryCounts.Remediation} - Needs maintenance intervention<br>
+     <span style='color:gray;'>⬤</span> Expired: ${summaryCounts.Expired} - Last inspection over 12 months<br>
+     <span style='color:lightgray;'>⬤</span> Unmarked: ${summaryCounts.Unmarked} - No inspection data yet`;
+}
 
 
 function filterByStatus() {
@@ -385,6 +383,7 @@ function loadFromLocalStorage() {
     gullyData.push({ marker, dataLog, status: lastStatus });
   });
   updateSummary();
+        saveToLocalStorage();
 }
 
 function showPopup(marker, latlng, dataLog) {
@@ -476,6 +475,7 @@ function showPopup(marker, latlng, dataLog) {
     dataLog.push({ lat: latlng.lat, lng: latlng.lng, name: gullyName, date, status, comment, photo: photoData });
       saveToLocalStorage();
       updateSummary();
+        saveToLocalStorage();
     marker.closePopup();
     };
     if (photoFile) {
@@ -533,11 +533,8 @@ function resetMap() {
   gullyData.forEach(({ marker }) => {
     map.removeLayer(marker);
   });
-  gullyData.length = 0;
-  for (const key in summaryCounts) {
-    summaryCounts[key] = 0;
-  }
-  updateSummary();
+    updateSummary();
+        saveToLocalStorage();
   localStorage.removeItem(storageKey);
 }
 
@@ -576,6 +573,7 @@ function enableDeleteMode() {
         map.removeLayer(marker);
         gullyData.splice(index, 1);
         updateSummary();
+        saveToLocalStorage();
         saveToLocalStorage();
         deleteMode = false;
       }
