--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 
 <script>
   const firebaseConfig = {
-    apiKey: "YOUR_API_KEY",
+    apiKey: "AIzaSyBsteq-tHQdiDcRk5UBg52AwAxpVcq67cw",
     authDomain: "gullytest3.firebaseapp.com",
     databaseURL: "https://gullytest3-default-rtdb.europe-west1.firebasedatabase.app",
     projectId: "gullytest3",
     storageBucket: "gullytest3.appspot.com",
-    messagingSenderId: "YOUR_SENDER_ID",
-    appId: "YOUR_APP_ID"
+    messagingSenderId: "876083677912",
+    appId: "1:876083677912:web:065de0c7cca446b78f65ad"
   };
 
   firebase.initializeApp(firebaseConfig);
