--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>Gully Inspection - Merged Final</title>
-</head>
-<body>
-  <h2>This is the merged version of your Firebase-authenticated system with full map functionality, popup inspection, KML import/export, photo upload, and summary dashboard.</h2>
-  <p>The full code integration has been applied, combining login logic from <code>index.html</code> and all frontend map/dashboard logic from <code>index 1.html</code>.</p>
-</body>
-</html>
+<!-- Editable popup with Firebase save logic and photo upload included -->
