--- a/index.html
+++ b/index.html
@@ -410,17 +410,43 @@ function setupUIForRole(role) {
   const isAdmin = role === 'admin';
   const isOperator = role === 'operator';
   
-  // Allow operators to save inspections and view history
-  document.getElementById("importFile").disabled = !isAdmin;
-  document.querySelectorAll("#controlPanel button").forEach(btn => {
-    if (btn.innerText.includes('Logout')) return;
-    if (btn.innerText.includes('Export CSV') || btn.innerText.includes('Backup JSON')) {
-      btn.disabled = !isAdmin && !isOperator;
-    } else {
-      btn.disabled = !isAdmin;
+  // Get all control buttons
+  const controlButtons = document.querySelectorAll("#controlPanel button");
+  
+  controlButtons.forEach(btn => {
+    const buttonText = btn.innerText.toLowerCase();
+    
+    // Always enable logout button
+    if (buttonText.includes('logout')) {
+      btn.disabled = false;
+      btn.style.opacity = 1;
+      return;
     }
-    btn.style.opacity = btn.disabled ? 0.5 : 1;
+    
+    // Handle specific buttons based on role
+    if (isAdmin) {
+      // Enable all buttons for admin
+      btn.disabled = false;
+      btn.style.opacity = 1;
+    } else if (isOperator) {
+      // Enable only specific buttons for operator
+      const allowedOperations = ['export csv', 'backup json'];
+      const isAllowed = allowedOperations.some(op => buttonText.includes(op.toLowerCase()));
+      btn.disabled = !isAllowed;
+      btn.style.opacity = isAllowed ? 1 : 0.5;
+    } else {
+      // Disable all buttons for other roles
+      btn.disabled = true;
+      btn.style.opacity = 0.5;
+    }
   });
+  
+  // Handle file input separately
+  const importFile = document.getElementById("importFile");
+  if (importFile) {
+    importFile.disabled = !isAdmin;
+    importFile.style.opacity = isAdmin ? 1 : 0.5;
+  }
 }
 
 function initMap() {
@@ -1178,7 +1204,7 @@ function updateSummary() {
     if (status === 'All' || count > 0) {
       const color = getStatusColor(status);
       summaryHtml += `
-        <div style="margin: 8px 0; cursor: pointer;" onclick="filterToStatus('${status}')">
+        <div style="margin: 8px 0;">
           <div style="display: flex; align-items: center;">
             <span style="display: inline-block; width: 12px; height: 12px; background: ${color}; border-radius: 50%; margin-right: 5px; border: 1px solid #000;"></span>
             <span style="flex: 1; font-weight: bold;">${status}: ${count}</span>
@@ -1199,15 +1225,6 @@ function updateSummary() {
   // Reapply current filter if exists
   const filterStatus = document.getElementById('filterStatus');
   if (filterStatus && filterStatus.value !== 'All') {
-    filterByStatus();
-  }
-}
-
-// Add function to filter by clicking on status in summary
-function filterToStatus(status) {
-  const filterStatus = document.getElementById('filterStatus');
-  if (filterStatus) {
-    filterStatus.value = status;
     filterByStatus();
   }
 }
@@ -1295,6 +1312,114 @@ function exportData() {
   } catch (error) {
     console.error('Export error:', error);
     alert('Error exporting data: ' + error.message);
+  }
+}
+
+function resetMap() {
+  if (!auth.currentUser) {
+    alert('You must be logged in to reset the map');
+    return;
+  }
+
+  if (currentRole !== 'admin') {
+    alert('Only administrators can reset the map');
+    return;
+  }
+
+  const confirmReset = confirm('Are you sure you want to reset the map? This will delete all gullies and their inspection history.');
+  if (!confirmReset) {
+    return;
+  }
+
+  try {
+    // Show loading message
+    const loadingDiv = document.createElement('div');
+    loadingDiv.id = 'resetLoadingMessage';
+    loadingDiv.style.cssText = `
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: white;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+      z-index: 10000;
+      text-align: center;
+    `;
+    loadingDiv.innerHTML = '<h3>Resetting map data...</h3><p>Please wait...</p>';
+    document.body.appendChild(loadingDiv);
+
+    // Clear all layers
+    Object.values(layers).forEach(layer => {
+      layer.clearLayers();
+    });
+
+    // Clear memory data
+    gullyData.length = 0;
+    importedFiles.clear();
+
+    // Clear Firebase data with proper error handling
+    const deletePromises = [
+      db.ref('gullies').remove(),
+      db.ref('gully_history').remove(),
+      db.ref('signage').remove(),
+      db.ref('playgrounds').remove(),
+      db.ref('parks').remove(),
+      db.ref('walkways').remove(),
+      db.ref('lining').remove()
+    ];
+
+    // Also clear storage
+    storage.ref().listAll()
+      .then(result => {
+        const deleteFilePromises = result.items.map(item => item.delete());
+        return Promise.all(deleteFilePromises);
+      })
+      .catch(error => {
+        console.error('Error clearing storage:', error);
+      });
+
+    // Wait for all deletes to complete
+    Promise.all(deletePromises)
+      .then(() => {
+        // Remove loading message
+        const loadingMessage = document.getElementById('resetLoadingMessage');
+        if (loadingMessage) {
+          loadingMessage.remove();
+        }
+
+        // Reset the filter
+        const filterStatus = document.getElementById('filterStatus');
+        if (filterStatus) {
+          filterStatus.value = 'All';
+          filterByStatus();
+        }
+
+        // Update summary
+        updateSummary();
+
+        // Show success message
+        alert('Map has been reset successfully');
+      })
+      .catch(error => {
+        console.error('Reset error:', error);
+        // Remove loading message
+        const loadingMessage = document.getElementById('resetLoadingMessage');
+        if (loadingMessage) {
+          loadingMessage.remove();
+        }
+        alert('Error resetting map: ' + error.message);
+      });
+
+  } catch (error) {
+    console.error('Reset error:', error);
+    // Remove loading message
+    const loadingMessage = document.getElementById('resetLoadingMessage');
+    if (loadingMessage) {
+      loadingMessage.remove();
+    }
+    alert('Error resetting map: ' + error.message);
   }
 }
 </script>
